--- a/popup.css
+++ b/popup.css
@@ -21,6 +21,7 @@
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  border: 1px solid white;
+  border-radius: 20px;
+  width: 30%; /* Could be more or less, depending on screen size */
 }
